--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-messages": "*",
     "express-session": "*",
     "express-validator": "*",
+    "minimist": "^1.2.5",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.6",
     "passport": "*",
